Deployment/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: angular-service
#                port:
#                  number: 80

          - path: /usermanagement
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 9093

          - path: /taskservice
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 9094

          - path: /notification
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 9095
